--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,6 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'org.hamcrest:hamcrest-library:1.3'
     compile 'com.google.code.gson:gson:2.2.+'
+    testImplementation 'org.mockito:mockito-core:3.3.3'
+
 }
